[gd_scene load_steps=4 format=3 uid="uid://bhtxc4y8j8j75"]

[ext_resource type="Script" uid="uid://dql1ibjhn0j6p" path="res://Scripts/gun.gd" id="1_oqrbh"]
[ext_resource type="Resource" uid="uid://dku341f27ud5v" path="res://Resource/Weapons/Pistol.tres" id="2_oqrbh"]
[ext_resource type="Texture2D" uid="uid://dm86wnbwlwkt7" path="res://Sprites/GUNS/GUN.png" id="3_t6ynv"]

[node name="Gun" type="Node2D" groups=["Gun"]]
rotation = 3.34707
scale = Vector2(1, -1)
script = ExtResource("1_oqrbh")
Weapon_Type = ExtResource("2_oqrbh")
Name = "Pistol"
Damage = 5.0
Fire_Rate = 3.0
InitialRotation = 3.59125
metadata/_edit_horizontal_guides_ = [-3.0]

[node name="SpriteGun" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(41.0056, 1.88204)
scale = Vector2(0.168184, 0.16912)
texture = ExtResource("3_t6ynv")

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2(62.5733, -1.25939)

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ReloadTimer" type="Timer" parent="."]

[node name="GunSoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ReloadSoundPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
